# dictionaries-common

./: Makefile.in  NEW-DESIGN  README.select.in  README.varlib.in  configure.in  emacsen.historic  enchant.mapping
debian/: README.Debian  README.emacs  changelog  control  copyright  dictionaries-common-dev.doc-base.dsdt-policy  dictionaries-common-dev.files  dictionaries-common-dev.install  dictionaries-common.NEWS  dictionaries-common.config-footer  dictionaries-common.config-header  dictionaries-common.dirs  dictionaries-common.docs  dictionaries-common.links  dictionaries-common.postinst  dictionaries-common.postrm  dictionaries-common.preinst  dictionaries-common.prerm  dictionaries-common.templates  rules
debian/patches/: 100_ispell.el_line-number-at-pos.patch  200_ispell.el_Xemacs-obsolete-function-alias.patch  300_ispell.el_XEmacs_window-dedicated-p_syntax.patch  400_flyspell.el_external-point-words-debug.patch  410_ispell-el_kill-ispell-if-other-frame.patch  420_ispell.el_guess-wording.patch  470_ispell.el_XEmacs-non-unified-chars-latin01.patch  472_ispell.el_protect-multibyte-string.patch  500_flyspell-el_resurrect-doublons-highlighting.patch  500_ispell.el_protect-xemacs-undefined-file-name-base.diff  600_flyspell.el_unsupported-wave-defface.patch  600_ispell.el_set-ispell-version.patch  601_flyspell.el_bad-Emacs-defface.patch  700_ispell.el_initial_defs.patch  950_flyspell.el_revert-sgml-lexical-context.patch  990_flyspell.el_change-disclaimer+version.patch  series  (+1 more)
debian/po/: ar.po  (+47 more)
policy/: dictionaries-common.checklist  dsdt-policy.xml.in  html.dsl
(+27 files in other folders)
