dnl Process this file with autoconf to produce a configure script.
AC_INIT(policy/dsdt-policy.xml.in)

LIBDIR=/var/lib/dictionaries-common
AC_SUBST(LIBDIR)

CACHEDIR=/var/cache/dictionaries-common
AC_SUBST(CACHEDIR)

EMACSENSUPPORT=emacsen-ispell-dicts.el
AC_SUBST(EMACSENSUPPORT)

RELEASE=`perl -ne 'print $1 if /\(([[^)]]+)\)/;last' < debian/changelog`
AC_SUBST(RELEASE)

DATE=`perl -ne 'BEGIN{%m=(Jan=>1,Feb=>2,Mar=>3,Apr=>4,May=>5,Jun=>6, \
                          Jul=>7,Aug=>8,Sep=>9,Oct=>10,Nov=>11,Dec=>12)} \
                if (/^ -- [[^,]]+, (\d+) (...) (\d+)/) { \
                  print "$3-$m{$2}-$1"; \
                  last; \
                }' < debian/changelog`
AC_SUBST(DATE)

AC_OUTPUT([Makefile
	   scripts/perl5/Debian/DictionariesCommon.pm
	   scripts/perl5/Devel/DictionariesCommon.pm
           support/emacsen/startup.el
	   policy/dsdt-policy.xml])
